<resources>
    <string name="app_name">Goal Smasher</string>
    <string name="enter_goal">Enter Goal</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="set_goal">Set Goal</string>
    <string name="cancel">Cancel</string>
    <string name="view_calendar">View Calendar</string>
    <string name="check_progress">Check Progress</string>
    <string name="your_calendar_and_goals">Your Calendar and Goals:</string>
    <string name="your_progress_and_goals">Your Progress and Goals:</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="clear">Clear</string>
    <string name="delete">Delete</string>
    <string name="manage_goals">Manage Goals</string>
    <string name="edit">Edit</string>
    <string name="create_goal">Create Goal</string>
    <string name="delete_all">Delete All</string>
    <string name="no_goals">You don\'t have any goals!</string>
</resources>